Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30995

JSON_SCHEMA_VALID is not validating case sensitive when using regex

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 11.1(EOL)
    • 11.1.0
    • JSON
    • None

    Description

      JSON_SCHEMA_VALID is not validating case sensitive when using regex

      11.1.0-dbg>SET @schema='{
          '>    "type": "string",
          '>    "pattern": "[A-Z]"
          '> }';
      Query OK, 0 rows affected (0.000 sec)
       
      11.1.0-dbg>
      

      Actual result

      11.1.0-dbg>SELECT JSON_SCHEMA_VALID(@schema,'"a"');
      +----------------------------------+
      | JSON_SCHEMA_VALID(@schema,'"a"') |
      +----------------------------------+
      |                                1 |
      +----------------------------------+
      1 row in set (0.000 sec)
      

      Expected result

      11.1.0-dbg>SELECT JSON_SCHEMA_VALID(@schema,'"a"');
      +----------------------------------+
      | JSON_SCHEMA_VALID(@schema,'"a"') |
      +----------------------------------+
      |                                0 |
      +----------------------------------+
      1 row in set (0.000 sec)
      

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2h 40m
                  2h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.