MDEV-30995: JSON_SCHEMA_VALID is not validating case sensitive when using regex

Analysis:
When initializing Regexp_processor_pcre object, we set the PCRE2_CASELESS
flag which is responsible for case insensitive comparison.
Fix:
Unset the flag after initializing.